# Java_fun_Projects

./: 100_java_projects.md  GUIA_Java_UI.md  Para_ter_JAR_EXEC.md  README.md
Apps/: .classpath  .project
Apps/Aashibanco/: .project  Dados.txt  RelatorioTransaccoes.txt
Apps/Aashibanco/src/: Calculos.java  Cliente.java  EscreverTexto.java  Executavel.java  Menu.java  Pesquisa.java  TodosClientes.java  Validacoes.java  Visualizacoes.java
Apps/Aresta/: .project
Apps/Aresta/src/: Aresta.java  DSU.java  ExemploGrafoGenerico.java  Grafo.java  GrafoGenerico.java
Apps/ArrayList/: .project
Apps/ArrayList/src/: Estudante.java  Executavel.java  Menu.java  Ordenacoes.java  TodosEstudantes.java  Validacoes.java  Visualizacoes.java
Apps/Array_de_Objecto/: .project  Dados.txt  Out.txt
Apps/Array_de_Objecto/src/: Executavel.java  Revista.java  TodasRevistas.java
Apps/Banco_AED1/: .project  Dados.txt  historia.txt
Apps/Banco_AED1/src/: Calculo.java  Cliente.java  Executavel.java  File.java  Menu.java  TodosCliente.java  Validar.java
Apps/Banco_AEDNOVO/: .project  Dados.txt  historia.txt
Apps/Banco_AEDNOVO/src/: Cliente.java  Escrever_LerOBJ.java  Menu.java  Pesquisa.java  TodosCliente.java  Viz.java
Apps/Barcos/: .project  Dados.txt
Apps/Barcos/src/: Barco.java  Calculo.java  Carga.java  Cruseiro.java  Escrever.java  Executavel.java  Menu.java  Pesca.java  Pesquisa.java  TodosBarco.java  Validacao.java  Visualizacao.java
Apps/Bilheite_Heranca/: .project  Dados.txt
Apps/Bilheite_Heranca/src/: API.java  Aereo.java  Bilhete.java  Cal.java  Carro.java  Comboio.java  Exc.java  File.java  Mar.java  Pesquisa.java  Terrestre.java  TodosB.java  Validar.java  Viz.java
Apps/Bilhete_Corecao/: .project
Apps/Bilhete_Corecao/src/: Aereo.java  Alteracoes.java  Bilhete.java  CalculoIVA.java  Calculos.java  Carro.java  Comboio.java  Executavel.java  FicheiroObjectos.java  Mar.java  Pesquisas.java  Remocoes.java  Tarefas.java  Terreste.java  Validacoes.java  Visualizacoes.java
Apps/Calculadora_Loja/: .project
Apps/Calculadora_Loja/src/: MainApp.java  PainelPrecoBase.java  PainelPrecoFinal.java
Apps/CanalHeranca/: .project  Dados.txt
Apps/CanalHeranca/src/: Atracao.java  Calculo.java  CriarFO.java  Executavel.java  Informativo.java  Jornal.java  Lazer.java  Novela.java  Pesquisa.java  Programa.java  Serie.java  TodosCanaT.java  Visualizacao.java
Apps/CigarroExameRecorenciaPOO2ArrayList/: .project  dados.txt
Apps/CigarroExameRecorenciaPOO2ArrayList/src/: Calculo.java  ECO.java  Executavel.java  Pesquisa.java  TodosCigarro.java  Validacao.java
Apps/Conta_Heranca/: .project  Dados.txt
Apps/Conta_Heranca/src/: API.java  Calcular.java  Conta.java  Corrente.java  Deposito.java  File.java  Poupanca.java  Salario.java  TodasConta.java  Visualizar.java
Apps/EDA2_Excercios_Pratico_1/: .project
Apps/EDA2_Excercios_Pratico_1/src/: Ex1.java  Ex2.java  Ex3.java  Ex4.java  Ex5.java  Ex6.java  Ex7.java
Apps/EDA_BancoNOVA/: .project  Dados.txt  historia.txt
Apps/EDA_Esquadra/: .project  Sistema policial.txt  dados.txt
Apps/EDA_Esquadra2_V1/: .project  dados.txt
Apps/EDA_Esquadra2_V2/: informadores.txt
Apps/EDA_Esquadra2_V3/: .project  ocorrencias.txt
Apps/EDA_EsquadraVritik/: .project
Apps/EDA_EsquadraVritik_V/: .project  ImplementacaoTreeBinaria.txt
Apps/EDA_Fila/: .project
Apps/EDA_List_V2/: .project
Apps/EDA_List_V3/: .project
Apps/EDA_Lista/: .project
Apps/EDA_Pilha/: .project
Apps/Edge/: .project
Apps/Excercicio_37/: .project  NovoFile.txt
Apps/Excercicio_38/: .project  Dados.txt  Novo.txt
Apps/Excercicio_39/: .project  Dados.txt  Novo.txt
Apps/Excercicio_40/: .project
Apps/Excercicio_Bebidas/: .project  Dados.txt  NOVOFILE.txt
Apps/ExemploDivisaoClass/: .project  Dados.txt  NovoFicheiro.txt
Apps/Exercicio_36/: .project  Dados.txt  FileCriado.txt
Apps/FacturaPOO/: .project
Apps/FaturaMVL/: .project  Dados.txt  Feixo_de_caixa.txt
Apps/File_Transfer/: .project
Apps/FlyWell_GUI/: .project  Acumulador.txt  Dados.txt
Apps/Gato/: .project
Apps/Grafo_Projectar_Mapeamento/: .project
Apps/Grafo_Projectar_Mapeamento_V1/: .project
Apps/Heranca1/: .project
Apps/Heranca2/: .project  Info.txt
Apps/Hollard_Seguros_GUI/: .project  Dados.txt
Apps/JogadorAL/: .project  Ganho.txt  dados.txt
Apps/Lan_Chat/: .project  teste@10.61.179.50.txt
Apps/Ligacao_BASE_DADOS_SQL_TESTE/: .classpath  .project
Apps/NotePad/: .classpath  .project
Apps/Note_Grafo/: .classpath  .project  README.md  graphnotes_1.0.deb
Apps/Note_Grafo/Exemplos/: teste de ninja.gn
Apps/Obra_Heranca/: .project  Dados.txt
Apps/Oficial_Heranca/: .project
Apps/OpenWEBJava/: .project
Apps/PaginaLogin/: .project
Apps/ProGymHeranca/: .project  Dados.txt
Apps/Recargs_GUI/: .project
Apps/RecordanciaPOO1/: .project  Fim.txt
Apps/RecordanciaPOO11/: .project  Contador tipo.txt  dados.txt
Apps/RecordanciaPOO2ArrayList/: .project
Apps/Remote_Access/: .project
Apps/Sistema_Gestao_Loja/: .classpath  .project
Apps/Teste2024_Correcao_POO2/: .project
Apps/Teste2_poo2_2023/: .project  Dados.txt
Apps/TesteJava_SQLPLUS/: .classpath  .project
Apps/Teste_GUI_CSV_PesquisaDinamica_Idea_BDBarato/: .project  README.md
Apps/Teste_mysql/: script.sql
Apps/TrabalhoPratico2/: .project  Dados.txt  OutPut.txt
Apps/Trabalho_36/: .project
Apps/Trabalho_Pratico_1_POO2/: .project  Cliente_de_Entregue_concluida.txt  Dados.txt
Apps/Trabalho_Pratico_1_V1_POO2/: .project  Dados.txt
Apps/Uber/: .project
Apps/VisitaExameRecorenciaPOO2ArrayList/: .project
Componentes/: AnimadorComboio.java  AnimadorGrafo.java  BotaoModerno.java  EfeitoExplosao.java  RelatorioCSV.java  RelatorioPDF.java
Componentes/Interface_Grafica_GUI/: .project  Dados.txt  MouseListener.txt
Grafo_Projectar_Mapeamento/: .project
Grafo_Projectar_Mapeamento_V1/: .project
Grafo_Projectar_Mapeamento_V1/src/: Aresta.java  Grafo.java  kruskal_algorithm.java
JDate_Teste/src/: DataComSpinner.java  EscolherDataSwing.java
JavaFX_Teste/src/: App.java
NotePad/src/: TodosNotas.java
(+496 files in other folders)
