{
  "nodes": [
    {
      "x": 129.19314891378153,
      "y": 571.4152208373033,
      "label": "Bem-vindo",
      "note": "nada"
    },
    {
      "x": 35.34626311198453,
      "y": 715.1316463542372,
      "label": "Nota 1",
      "note": ""
    },
    {
      "x": 204.39976814292223,
      "y": 410.1970901276427,
      "label": "Helder",
      "note": "\u003chtml\u003e\n  \u003chead\u003e\n    \n  \u003c/head\u003e\n  \u003cbody\u003e\n    Helder esta estudar com telefone a sentir calor nao tem como\n  \u003c/body\u003e\n\u003c/html\u003e\n",
      "colorHex": "#FF0000"
    },
    {
      "x": 272.8584499087991,
      "y": 263.36985010264226,
      "label": "Nova nota",
      "note": "boa cena"
    },
    {
      "x": 123.77514226333659,
      "y": 261.1190044778161,
      "label": "teste ",
      "note": "estreka"
    },
    {
      "x": 47.01169526327566,
      "y": 500.238201249962,
      "label": "Nova nota",
      "note": "",
      "colorHex": "#CC00FF"
    },
    {
      "x": -117.40535020600689,
      "y": 549.3125362265118,
      "label": "Nova nota",
      "note": ""
    },
    {
      "x": 31.38356626922995,
      "y": 410.96855809758966,
      "label": "Nova nota",
      "note": ""
    },
    {
      "x": 52.69595464009911,
      "y": 324.5790007812933,
      "label": "Nova notamnasd",
      "note": "\u003chtml\u003e\n  \u003chead\u003e\n    \n  \u003c/head\u003e\n  \u003cbody\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      ,da\n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      na.,n\n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      na.,n\n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      na.,n\n    \u003c/p\u003e\n  \u003c/body\u003e\n\u003c/html\u003e\n",
      "colorHex": "#990099"
    },
    {
      "x": 409.21158861867696,
      "y": -23.923507619463724,
      "label": "Bem-vindo",
      "note": "nada"
    },
    {
      "x": 411.13836736208344,
      "y": -194.9277402952967,
      "label": "Nota 1",
      "note": ""
    },
    {
      "x": 357.24854272441723,
      "y": 148.92388032469344,
      "label": "Helder",
      "note": "\u003chtml\u003e\n  \u003chead\u003e\n    \n  \u003c/head\u003e\n  \u003cbody\u003e\n    Helder esta estudar com telefone a sentir calor nao tem como\n  \u003c/body\u003e\n\u003c/html\u003e\n",
      "colorHex": "#FF0000"
    },
    {
      "x": 189.1010778519437,
      "y": 125.56446530397844,
      "label": "Nova nota",
      "note": "boa cena"
    },
    {
      "x": 311.73562265236075,
      "y": -16.56331879601333,
      "label": "teste ",
      "note": "estreka"
    },
    {
      "x": 222.1500922236577,
      "y": 27.442540478095623,
      "label": "Nova nota",
      "note": "",
      "colorHex": "#CC00FF"
    },
    {
      "x": 92.61345995802866,
      "y": -84.40838638020269,
      "label": "Nova nota",
      "note": ""
    },
    {
      "x": 499.3363744728507,
      "y": 57.810526769319104,
      "label": "Nova nota",
      "note": ""
    },
    {
      "x": 408.4640641918286,
      "y": 352.3675102102808,
      "label": "Nova notamnasd",
      "note": "\u003chtml\u003e\n  \u003chead\u003e\n    \n  \u003c/head\u003e\n  \u003cbody\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      ,da\n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      na.,n\n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      na.,n\n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      na.,n\n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      \n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      \n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      \n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      helder nao e serio\n    \u003c/p\u003e\n  \u003c/body\u003e\n\u003c/html\u003e\n",
      "colorHex": "#660066"
    },
    {
      "x": 666.194872657447,
      "y": 150.67459701727338,
      "label": "Bem-vindo",
      "note": "nada"
    },
    {
      "x": 781.9667881242582,
      "y": 23.78386026445531,
      "label": "Nota 1",
      "note": ""
    },
    {
      "x": 625.0109513053151,
      "y": 324.44102736507966,
      "label": "Helder",
      "note": "\u003chtml\u003e\n  \u003chead\u003e\n    \n  \u003c/head\u003e\n  \u003cbody\u003e\n    Helder esta estudar com telefone a sentir calor nao tem como\n  \u003c/body\u003e\n\u003c/html\u003e\n",
      "colorHex": "#FF0000"
    },
    {
      "x": 791.9953870558629,
      "y": 271.0659194770401,
      "label": "Nova nota",
      "note": "boa cena"
    },
    {
      "x": 669.7439848498076,
      "y": 488.7814233851377,
      "label": "teste ",
      "note": "estreka"
    },
    {
      "x": 764.6499272960002,
      "y": 442.19659700192767,
      "label": "Nova nota",
      "note": "",
      "colorHex": "#CC00FF"
    },
    {
      "x": 911.9132490529738,
      "y": 529.8356367073667,
      "label": "Nova nota",
      "note": ""
    },
    {
      "x": 795.7131380538365,
      "y": 356.9927667506522,
      "label": "Nova nota",
      "note": ""
    },
    {
      "x": 743.2017062993106,
      "y": 198.94173676433604,
      "label": "Nova notamnasd",
      "note": "\u003chtml\u003e\n  \u003chead\u003e\n    \n  \u003c/head\u003e\n  \u003cbody\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      ,da\n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      na.,n\n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      na.,n\n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      na.,n\n    \u003c/p\u003e\n  \u003c/body\u003e\n\u003c/html\u003e\n",
      "colorHex": "#990099"
    },
    {
      "x": 522.5025912436208,
      "y": 537.6849325509173,
      "label": "Bem-vindo",
      "note": "nada"
    },
    {
      "x": 532.0394878527461,
      "y": 376.9703888703494,
      "label": "Nota 1",
      "note": ""
    },
    {
      "x": 372.63501630973155,
      "y": 553.9997425575547,
      "label": "Helder",
      "note": "\u003chtml\u003e\n  \u003chead\u003e\n    \n  \u003c/head\u003e\n  \u003cbody\u003e\n    Helder esta estudar com telefone a sentir calor nao tem como\n  \u003c/body\u003e\n\u003c/html\u003e\n",
      "colorHex": "#FF0000"
    },
    {
      "x": 240.78181751163152,
      "y": 660.3666240487412,
      "label": "Nova nota",
      "note": "boa cena"
    },
    {
      "x": 508.6505610507608,
      "y": 659.8054336277036,
      "label": "teste ",
      "note": "estreka"
    },
    {
      "x": 425.7684452796447,
      "y": 727.9261719976847,
      "label": "Nova nota",
      "note": "",
      "colorHex": "#CC00FF"
    },
    {
      "x": 464.7312279447453,
      "y": 894.5337380796442,
      "label": "Nova nota",
      "note": ""
    },
    {
      "x": 324.69534020037526,
      "y": 719.9346085746347,
      "label": "Nova nota",
      "note": ""
    }
  ],
  "edges": [
    {
      "a": 0,
      "b": 1
    },
    {
      "a": 0,
      "b": 2
    },
    {
      "a": 2,
      "b": 3
    },
    {
      "a": 4,
      "b": 2
    },
    {
      "a": 5,
      "b": 6
    },
    {
      "a": 2,
      "b": 5
    },
    {
      "a": 7,
      "b": 2
    },
    {
      "a": 8,
      "b": 2
    },
    {
      "a": 9,
      "b": 10
    },
    {
      "a": 9,
      "b": 11
    },
    {
      "a": 11,
      "b": 12
    },
    {
      "a": 13,
      "b": 11
    },
    {
      "a": 14,
      "b": 15
    },
    {
      "a": 11,
      "b": 14
    },
    {
      "a": 16,
      "b": 11
    },
    {
      "a": 17,
      "b": 11
    },
    {
      "a": 2,
      "b": 17
    },
    {
      "a": 18,
      "b": 19
    },
    {
      "a": 18,
      "b": 20
    },
    {
      "a": 20,
      "b": 21
    },
    {
      "a": 22,
      "b": 20
    },
    {
      "a": 23,
      "b": 24
    },
    {
      "a": 20,
      "b": 23
    },
    {
      "a": 25,
      "b": 20
    },
    {
      "a": 26,
      "b": 20
    },
    {
      "a": 27,
      "b": 28
    },
    {
      "a": 27,
      "b": 29
    },
    {
      "a": 29,
      "b": 30
    },
    {
      "a": 31,
      "b": 29
    },
    {
      "a": 32,
      "b": 33
    },
    {
      "a": 29,
      "b": 32
    },
    {
      "a": 34,
      "b": 29
    },
    {
      "a": 29,
      "b": 17
    },
    {
      "a": 20,
      "b": 17
    }
  ]
}