{
  "nodes": [
    {
      "x": 155.9478856657059,
      "y": 562.2925641924677,
      "label": "Bem-vindo",
      "note": "nada"
    },
    {
      "x": 53.42031762784952,
      "y": 699.8336306432972,
      "label": "Nota 1",
      "note": ""
    },
    {
      "x": 232.19181932943417,
      "y": 400.51453592042157,
      "label": "Helder",
      "note": "\u003chtml\u003e\n  \u003chead\u003e\n    \n  \u003c/head\u003e\n  \u003cbody\u003e\n    Helder esta estudar com telefone a sentir calor nao tem como\n  \u003c/body\u003e\n\u003c/html\u003e\n",
      "colorHex": "#FF0000"
    },
    {
      "x": 279.950345035454,
      "y": 245.61970257807627,
      "label": "Nova nota",
      "note": "boa cena"
    },
    {
      "x": 146.44159443963423,
      "y": 253.83927258385626,
      "label": "teste ",
      "note": "estreka"
    },
    {
      "x": 75.2878383039317,
      "y": 491.3395312171734,
      "label": "Nova nota",
      "note": "",
      "colorHex": "#CC00FF"
    },
    {
      "x": -90.77946952159739,
      "y": 534.6207931373359,
      "label": "Nova nota",
      "note": ""
    },
    {
      "x": 59.39486579670211,
      "y": 403.6131674764262,
      "label": "Nova nota",
      "note": ""
    },
    {
      "x": 78.84462022654094,
      "y": 317.98213362888083,
      "label": "Nova notamnasd",
      "note": "\u003chtml\u003e\n  \u003chead\u003e\n    \n  \u003c/head\u003e\n  \u003cbody\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      ,da\n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      na.,n\n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      na.,n\n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      na.,n\n    \u003c/p\u003e\n  \u003c/body\u003e\n\u003c/html\u003e\n",
      "colorHex": "#990099"
    },
    {
      "x": 439.60859569619464,
      "y": -33.975180894494045,
      "label": "Bem-vindo",
      "note": "nada"
    },
    {
      "x": 441.42314564593335,
      "y": -204.66822287115335,
      "label": "Nota 1",
      "note": ""
    },
    {
      "x": 386.18176398305303,
      "y": 137.7025735654416,
      "label": "Helder",
      "note": "\u003chtml\u003e\n  \u003chead\u003e\n    \n  \u003c/head\u003e\n  \u003cbody\u003e\n    Helder esta estudar com telefone a sentir calor nao tem como\n  \u003c/body\u003e\n\u003c/html\u003e\n",
      "colorHex": "#FF0000"
    },
    {
      "x": 218.09742966633883,
      "y": 115.27191233700127,
      "label": "Nova nota",
      "note": "boa cena"
    },
    {
      "x": 341.1183973567021,
      "y": -27.59839469893231,
      "label": "teste ",
      "note": "estreka"
    },
    {
      "x": 251.3179719824538,
      "y": 17.48234144718357,
      "label": "Nova nota",
      "note": "",
      "colorHex": "#CC00FF"
    },
    {
      "x": 121.44658238727644,
      "y": -93.26515266852499,
      "label": "Nova nota",
      "note": ""
    },
    {
      "x": 528.9274370835077,
      "y": 48.16299305593418,
      "label": "Nova nota",
      "note": ""
    },
    {
      "x": 435.40562373607395,
      "y": 338.4201834133912,
      "label": "Nova notamnasd",
      "note": "\u003chtml\u003e\n  \u003chead\u003e\n    \n  \u003c/head\u003e\n  \u003cbody\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      ,da\n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      na.,n\n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      na.,n\n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      na.,n\n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      \n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      \n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      \n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      helder nao e serio\n    \u003c/p\u003e\n  \u003c/body\u003e\n\u003c/html\u003e\n",
      "colorHex": "#FFFF33"
    },
    {
      "x": 678.7253782886679,
      "y": 143.47637926932714,
      "label": "Bem-vindo",
      "note": "nada"
    },
    {
      "x": 781.8510463952229,
      "y": 7.031477508569141,
      "label": "Nota 1",
      "note": ""
    },
    {
      "x": 646.9921137582447,
      "y": 317.1016330119392,
      "label": "Helder",
      "note": "\u003chtml\u003e\n  \u003chead\u003e\n    \n  \u003c/head\u003e\n  \u003cbody\u003e\n    Helder esta estudar com telefone a sentir calor nao tem como\n  \u003c/body\u003e\n\u003c/html\u003e\n",
      "colorHex": "#FF0000"
    },
    {
      "x": 812.7529382769933,
      "y": 261.3888295285819,
      "label": "Nova nota",
      "note": "boa cena"
    },
    {
      "x": 697.0700726646062,
      "y": 478.6306549560951,
      "label": "teste ",
      "note": "estreka"
    },
    {
      "x": 788.4129501842075,
      "y": 433.30172387674014,
      "label": "Nova nota",
      "note": "",
      "colorHex": "#CC00FF"
    },
    {
      "x": 932.6371794016586,
      "y": 526.2336769555911,
      "label": "Nova nota",
      "note": ""
    },
    {
      "x": 817.8731893767084,
      "y": 347.8039599584266,
      "label": "Nova nota",
      "note": ""
    },
    {
      "x": 761.602963655957,
      "y": 188.9974039814845,
      "label": "Nova notamnasd",
      "note": "\u003chtml\u003e\n  \u003chead\u003e\n    \n  \u003c/head\u003e\n  \u003cbody\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      ,da\n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      na.,n\n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      na.,n\n    \u003c/p\u003e\n    \u003cp style\u003d\"margin-top: 0\"\u003e\n      na.,n\n    \u003c/p\u003e\n  \u003c/body\u003e\n\u003c/html\u003e\n",
      "colorHex": "#990099"
    },
    {
      "x": 610.791436359474,
      "y": 599.2088743692453,
      "label": "Bem-vindo",
      "note": "nada"
    },
    {
      "x": 554.9587293908697,
      "y": 446.4020421310573,
      "label": "Nota 1",
      "note": ""
    },
    {
      "x": 450.6299959504349,
      "y": 542.4983366797466,
      "label": "Helder",
      "note": "\u003chtml\u003e\n  \u003chead\u003e\n    \n  \u003c/head\u003e\n  \u003cbody\u003e\n    Helder esta estudar com telefone a sentir calor nao tem como\n  \u003c/body\u003e\n\u003c/html\u003e\n",
      "colorHex": "#FF0000"
    },
    {
      "x": 296.08260682794537,
      "y": 605.9799001181492,
      "label": "Nova nota",
      "note": "boa cena"
    },
    {
      "x": 551.8110318467003,
      "y": 682.7824698299102,
      "label": "teste ",
      "note": "estreka"
    },
    {
      "x": 458.921359189921,
      "y": 723.9185824145374,
      "label": "Nova nota",
      "note": "",
      "colorHex": "#CC00FF"
    },
    {
      "x": 466.88161932468375,
      "y": 894.6031962290327,
      "label": "Nova nota",
      "note": ""
    },
    {
      "x": 362.1744061572077,
      "y": 690.2085976287001,
      "label": "Nova nota",
      "note": ""
    }
  ],
  "edges": [
    {
      "a": 0,
      "b": 1
    },
    {
      "a": 0,
      "b": 2
    },
    {
      "a": 2,
      "b": 3
    },
    {
      "a": 4,
      "b": 2
    },
    {
      "a": 5,
      "b": 6
    },
    {
      "a": 2,
      "b": 5
    },
    {
      "a": 7,
      "b": 2
    },
    {
      "a": 8,
      "b": 2
    },
    {
      "a": 9,
      "b": 10
    },
    {
      "a": 9,
      "b": 11
    },
    {
      "a": 11,
      "b": 12
    },
    {
      "a": 13,
      "b": 11
    },
    {
      "a": 14,
      "b": 15
    },
    {
      "a": 11,
      "b": 14
    },
    {
      "a": 16,
      "b": 11
    },
    {
      "a": 17,
      "b": 11
    },
    {
      "a": 2,
      "b": 17
    },
    {
      "a": 18,
      "b": 19
    },
    {
      "a": 18,
      "b": 20
    },
    {
      "a": 20,
      "b": 21
    },
    {
      "a": 22,
      "b": 20
    },
    {
      "a": 23,
      "b": 24
    },
    {
      "a": 20,
      "b": 23
    },
    {
      "a": 25,
      "b": 20
    },
    {
      "a": 26,
      "b": 20
    },
    {
      "a": 27,
      "b": 28
    },
    {
      "a": 27,
      "b": 29
    },
    {
      "a": 29,
      "b": 30
    },
    {
      "a": 31,
      "b": 29
    },
    {
      "a": 32,
      "b": 33
    },
    {
      "a": 29,
      "b": 32
    },
    {
      "a": 34,
      "b": 29
    },
    {
      "a": 29,
      "b": 17
    },
    {
      "a": 20,
      "b": 17
    }
  ]
}